--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mysql": "^2.15.0",
-    "mysql2": "^1.5.3",
+    "sqlite3": "^4.0.0",
     "nodemon": "^1.17.4",
     "pg": "^7.4.3",
     "sequelize": "^4.37.7"
